--- a/package.json
+++ b/package.json
@@ -12,27 +12,36 @@
     "update-content": "node scripts/update-noticias.js"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "@next/font": "^14.0.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.2",
+    "next": "^14.0.0",
     "next-seo": "^6.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.32.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "typescript": "^5.0.0",
+    "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "typescript": "^5.0.0"
   },
-  "keywords": ["hub", "conteudo", "noticias", "curriculo", "saude", "tecnologia", "educacao"],
+  "keywords": [
+    "hub",
+    "conteudo",
+    "noticias",
+    "curriculo",
+    "saude",
+    "tecnologia",
+    "educacao"
+  ],
   "author": "HubAll Team",
   "license": "MIT",
   "repository": {
