--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@next/font": "^14.0.0",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.2",
