--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "@/*": ["./src/*"],
       "@/components/*": ["./src/components/*"],
       "@/lib/*": ["./src/lib/*"],
-      "@/types/*": ["./src/types/*"],
+      "@/types": ["./src/types"],
       "@/data/*": ["./src/data/*"]
     }
   },
